<!--
  ~ Copyright (c) Mahmoud Abdurrahman 2017. All Rights Reserved.
  ~ <p/>
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~ <p/>
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~ <p/>
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <!-- App Name -->
    <string name="app_name">Bike Rental</string>

    <!-- Activities Names -->
    <string name="activity_places">Bike Places</string>
    <string name="activity_rent">Rent Bike</string>

    <!-- EditText Hints -->
    <string name="edit_password">Password</string>
    <string name="edit_login_email">Email</string>

    <string name="edit_card_number">Card number</string>
    <string name="edit_card_holder">Card holder name</string>
    <string name="edit_card_expires">Expires MM/YY</string>
    <string name="edit_card_cvv">CVV</string>

    <!-- Labels -->
    <string name="label_list_view">List View</string>
    <string name="label_map_view">Map View</string>

    <string name="label_get_directions">Get Directions</string>
    <string name="label_login">Already have login?</string>
    <string name="label_register">Don\'t have login?</string>

    <!-- Menus -->
    <string name="action_logout">Logout</string>

    <!-- Buttons -->
    <string name="btn_login">Login</string>
    <string name="btn_register">Register</string>
    <string name="btn_try_again">Try Again</string>
    <string name="btn_check_again">Check Again</string>

    <string name="btn_rent">Rent</string>

    <!-- Messages -->
    <string name="msg_confirm_rent">Are you sure you want to rent pike in %s?</string>
    <string name="msg_congratulation_rent">Congratulation! You have just rent a bike in %s.\nWe hope you enjoy the experience!</string>

    <!-- Progress Messages -->
    <string name="_please_wait">Please wait&#8230;</string>
    <string name="_logging_in">Logging in&#8230;</string>
    <string name="_registering">Signing up&#8230;</string>
    <string name="_logging_out">Logging out&#8230;</string>
    <string name="_sending_request">Sending request&#8230;</string>

</resources>
