...
    <!-- General Errors -->
    <string name="error_no_items_to_display">No items to display</string>
    <string name="error_generic_server_error">There was an error contacting the server, %1$s</string>
    <string name="error_logout">Failed to logout, please contact support!</string>

    <!-- Validation Errors -->
    <string name="error_required">This field is required</string>
    <string name="error_email_not_valid">Please enter a valid email</string>
    <string name="error_string_length">This field must be at least %d characters long</string>
    <string name="error_password_length">Your password must be at least 8 characters long</string>
    <string name="error_password_capital_letters">Your password must include at least one capital letter</string>
    <string name="error_password_numbers">Your password must include at least one number</string>

    <string name="error_creditcard_length">The Credit Card number must be 16 numbers long</string>
...
